Mobile CSS improvements

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -1194,20 +1194,18 @@ a {
     }
 
     &__image {
-      //width: 100px;
       margin-bottom: 10px;
       max-width: 100px;
-      width: auto;
+      width: 100%;
       height: auto;
     }
 
     &__body {
-      display: block;
+      //display: block;
     }
 
     &__images {
       max-width: 100%;
-      flex-wrap: wrap;
     }
 
     &__image-wrap {
