Get CSFR token from cookie

--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -40,16 +40,13 @@
         {% block js_templates %}{% endblock %}
     </div>
 
-    <div id="csrf_token">
-        {% csrf_token %}
-    </div>
-
     <div id="scripts">
-        <script src="{% static "client_errors/client_errors.js" %}"></script>
-
         <script src="{% static "assets/underscore/underscore-min.js" %}"></script>
         <script src="{% static "assets/jquery/jquery.min.js" %}"></script>
         <script src="{% static "assets/lightbox/js/lightbox.min.js" %}"></script>
+        <script src="{% static "assets/js.cookie.js" %}"></script>
+
+        <script src="{% static "client_errors/client_errors.js" %}"></script>
 
         <script src="{% static "imageboard/localCollection.js" %}"></script>
         <script src="{% static "imageboard/main.js" %}"></script>
