--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no">
 
-    <title>{% block page_title %}Gensokyo Imageboard{% endblock %}</title>
+    <title>{% block page_title %}Hexchan{% endblock %}</title>
 
     <link rel="icon" href="{% static "imageboard/favicon.png" %}">
     <link rel="stylesheet" href="{% static 'imageboard/style.css' %}">
