Posting form header

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -811,6 +811,15 @@ a {
     margin: 0 auto;
   }
 
+  &__header {
+    border-bottom: 1px dotted;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
   &__field {
     display: flex;
     margin: 5px 0;
