--- a/src/imageboard/templates/imageboard/catalog_page.html
+++ b/src/imageboard/templates/imageboard/catalog_page.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="catalog-item__header">
-                            <span class="catalog-item__hid js-thread-hid" data-id="{{ thread.id }}">{{ thread.hid2hex }}</span>
+                            <span class="catalog-item__hid hid js-thread-hid" data-id="{{ thread.id }}">{{ thread.hid2hex }}</span>
                             <span class="catalog-item__title">
                                 {{ op_post.title }}
                             </span>
