--- a/src/imageboard/templates/imageboard/parts/js_templates.html
+++ b/src/imageboard/templates/imageboard/parts/js_templates.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="placeholder-item-template">
     <div class="placeholder-item placeholder-item--<%= type %>" id="placeholder-<%= type %>-<%= id %>" data-id="<%= id %>">
         <div class="placeholder-item__deleted-label">
-            <span class="placeholder-item__hid">
+            <span class="placeholder-item__hid hid ">
                 <%= hid %>
             </span>
             <span class="placeholder-item__text">
