New frontend structure
* Every frontend component moved into `src/frontend` dir from `<app_name>/static` dirs
* Scripts are bundled with Rollup
* `build_frontend.sh` script builds and copies everything into `dev/frontend` which is served with Django static module
* Assets app removed

--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -77,7 +77,7 @@
   src:
     local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url('../assets/MaterialIcons-Regular.woff') format('woff');
+    url('fonts/MaterialIcons-Regular.woff') format('woff');
 }
 
 
@@ -96,7 +96,7 @@ html {
 
 body {
   font: 14px/20px 'Ubuntu', 'Trebuchet MS', sans-serif;
-  background: @page-bg  url("squared_metal.png") fixed;
+  background: @page-bg  url("images/squared_metal.png") fixed;
   color: @main-color;
   position: relative;
   padding: 0;
@@ -254,7 +254,7 @@ a {
     padding: 0 10px 0 50px;
     border-right: 1px solid @separator-bg;
     font-size: 24px;
-    background: url('hexchan.svg') 10px center no-repeat;
+    background: url('images/hexchan.svg') 10px center no-repeat;
     text-decoration: none;
     //border-radius: 0 0 0 @block-border-radius;
 
