--- a/src/imageboard/templates/error_base.html
+++ b/src/imageboard/templates/error_base.html
@@ -10,8 +10,8 @@
 
     <title>{{ config.SITE_NAME }} :: {{ title }}</title>
 
-    <link rel="icon" href="{% static "imageboard/favicon.png" %}">
-    <link rel="stylesheet" href="{% static 'imageboard/style.css' %}">
+    <link rel="icon" href="{% static "favicon.png" %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
 <div class="error-page">
