Moved Rules block into Reply form, made form more compact

--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -766,6 +766,7 @@ a {
 
 
 .posting-form {
+  display: flex;
   width: 100%;
   background: @main-bg;
   color: @main-color;
@@ -775,17 +776,57 @@ a {
   .item-shadow;
 
   &__inner {
-    max-width: 800px;
-    margin: 0 auto;
+    width: 600px;
+    flex: 1 1 auto;
   }
 
   &__header {
-    border-bottom: 1px dotted;
+    height: 30px;
+    position: relative;
     margin-bottom: 10px;
-    padding-bottom: 10px;
-    text-align: center;
+  }
+
+  &__rules {
+    width: 300px;
+    flex: 1 1 auto;
+    padding-left: 19px;
+    border-left: 1px dotted @separator-bg;
+    margin-left: 20px;
+
+    *:first-child {
+      margin-top: 0;
+    }
+
+    *:last-child {
+      margin-bottom: 0;
+    }
+
+    //p {
+    //  margin: 5px 0;
+    //}
+    //
+    //li {
+    //  margin: 5px 0;
+    //}
+
+    ul, ol {
+      padding: 0 0 0 1em;
+      margin: 10px 0;
+    }
+  }
+
+  &__rules-header {
     font-size: 20px;
+    line-height: 30px;
     font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: bold;
+    padding-left: 80px;
   }
 
   &__field {
@@ -842,8 +883,11 @@ a {
   }
 
   &__submit {
+    position: absolute;
+    right: 0;
+    top: 0;
     text-align: center;
-    display: inline-block;
+    display: block;
     color: @button-color;
     background: @button-bg;
     border-radius: @input-border-radius;
@@ -1052,6 +1096,7 @@ a {
 
   &__input {
     margin-right: 10px;
+    width: 100px;
   }
 
   &__button {
